# Docs-digitization

./: .gitignore  CHANGES.md  CLAUDE.md  CLIENT-REPLY-2026-04-28.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  _typos.toml  pdf-attachment-langchain-litellm-bug.md
backend/: .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
backend/app/: main.py
backend/app/api/: dependencies.py  websocket.py
backend/app/bmr/: __init__.py
backend/app/compliance/: alcoa.py  applicability.py  checklist.py  context_builder.py  evaluator.py  gmp.py  image_color_check.py  models.py  orchestrator.py  page_image_loader.py  segmentation.py  segmentation_headers.py  segmentation_overrides.py  sop.py  summarizer.py  vision_evaluator.py
backend/app/config/: container.py  settings.py
backend/app/core/: task_manager.py
backend/app/hitl/: audit_trail.py  review_queue.py
backend/app/observability/: __init__.py  context.py  health.py  logging.py  metrics.py  middleware.py  redaction.py  run_telemetry.py  tracing.py
backend/app/workflow/: compliance_graph.py  document_graph.py  nodes.py  state.py
backend/config/: settings.dev.yaml  settings.prod.yaml  settings.staging.yaml  settings.test.yaml
backend/scripts/: review_alcoa_noncompliant.py  run_checklist_agentic_postpass.py  test_datalab_api.py
backend/scripts/datalab_output/: convert_markdown.md  extract_raw.json
backend/tests/: conftest.py
backend/tests/benchmark/: benchmark_ci_gate.py  custom_model_pilot.py  label_schema.py  production_acceptance.py  run_extraction_benchmark.py
backend/tests/bmr/: test_e2e.py
backend/tests/compliance/: test_agentic_audit.py  test_agentic_quality_fixes.py  (+31 more)
context/poc/: main.py  prompts-tested  pyproject.toml  understanding.md
(+592 files in other folders)
