[project]
name = "auto-transcription"
version = "0.1.0"
description = "End-to-end document digitalization platform with multi-engine OCR, HITL review, and compliance agents"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]",
    "uvicorn[standard]",
    "pydantic>=2.0",
    "pydantic-settings",
    "pyyaml",
    "sqlalchemy[asyncio]",
    "asyncpg",
    "alembic",
    "langgraph",
    "langgraph-checkpoint-postgres",
    "langextract",
    "marker-pdf",
    "docling",
    "azure-ai-documentintelligence",
    "python-multipart",
    "aiofiles",
    "httpx",
    "pypdfium2>=4.0",
    "markdown",
    "google-genai",
    "openai",
    "pillow",
    "datalab-python-sdk",
    "jsonschema>=4.26.0",
    "weasyprint>=68.1",
]

[project.scripts]
bmr-rules = "app.bmr.cli.__main__:main"

[project.optional-dependencies]
dev = [
    "ruff",
    "pyright",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "httpx",
]

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "basic"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
