[project]
name = "src"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncio>=4.0.0",
    "datalab-python-sdk>=0.2.0",
    "dotenv>=0.9.9",
    "fitz>=0.0.1.dev2",
    "langchain-openai>=1.1.7",
    "pypdf2>=3.0.1",
    "requests>=2.32.5",
]
